// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`étalon Seaview — runModel > mode auto (pré-sélection du modèle) reproduit la référence 1`] = `
{
  "belt": {
    "beltSpeedBottom": 4.71560303577,
    "beltSpeedTop": 59.5524691358,
    "beltW": 6,
    "effectArea": [
      43.524,
      38.796,
      35.922,
    ],
    "ezBBeltL": 5987,
    "ezRT_Bottom": 76.1768955688,
    "ezRT_Top": 6.51459134491,
    "ezTopBeltL": 6466,
    "layerThickness": [
      9.52380952381,
      14.8763921913,
      310.731139284,
    ],
    "porosityFactor": [
      0.552872792309,
      0.62214602167,
      0.8,
    ],
    "totNoodleL": 85995.4294867,
    "wzBeltL": 7254,
    "wzRT": 7.30851308629,
  },
  "condenser": {
    "fW0": 21.463603117,
    "fW1": 22.2947428768,
    "tW0": 25,
    "tW1": 50,
  },
  "energy": {
    "evapEZ": 613.421444794,
    "evapLoadH": 2145.89675251,
    "evapTotal": 2990.56964573,
    "evapWZ": 2377.14820094,
    "ezHInput": 448.338142321,
    "ezHeatLoss": 35.7314814815,
    "heaterDuty": 2590.68055091,
    "totalHInput": 2480.28845863,
    "wzHInput": 2012.80838105,
    "wzHeatLoss": 117.913888889,
  },
  "fans": [
    {
      "designFlow": 4.53681704366,
      "designPressure": 4768.8,
      "efficiency": 0.6,
      "fanCapacity_kW": 36.058621863,
      "motorCapacity_kW": 39.6644840494,
      "nFans": 1,
      "name": "Ventilateur air séchage",
      "opFlow": [
        4.1243791306,
        22.7037957567,
        9.01747335588,
        1.48494290565,
      ],
      "operatingFlow": 4.1243791306,
      "operatingPressure": 3974,
      "powerConsumption_kW": 30.0488515525,
      "powerFactor": 1.1,
      "safetyFactorAir": 1.1,
      "safetyFactorPressure": 1.2,
      "selectedHP": 60,
    },
    {
      "designFlow": 24.9741753324,
      "designPressure": 600,
      "efficiency": 0.6,
      "fanCapacity_kW": 24.9741753324,
      "motorCapacity_kW": 27.4715928656,
      "nFans": 2,
      "name": "Ventilateur circ. ZC",
      "opFlow": [
        4.1243791306,
        22.7037957567,
        9.01747335588,
        1.48494290565,
      ],
      "operatingFlow": 22.7037957567,
      "operatingPressure": 500,
      "powerConsumption_kW": 41.6236255539,
      "powerFactor": 1.1,
      "safetyFactorAir": 1.1,
      "safetyFactorPressure": 1.2,
      "selectedHP": 40,
    },
    {
      "designFlow": 9.91922069147,
      "designPressure": 600,
      "efficiency": 0.6,
      "fanCapacity_kW": 9.91922069147,
      "motorCapacity_kW": 10.9111427606,
      "nFans": 2,
      "name": "Ventilateur circ. ZF",
      "opFlow": [
        4.1243791306,
        22.7037957567,
        9.01747335588,
        1.48494290565,
      ],
      "operatingFlow": 9.01747335588,
      "operatingPressure": 500,
      "powerConsumption_kW": 16.5320344858,
      "powerFactor": 1.1,
      "safetyFactorAir": 1.1,
      "safetyFactorPressure": 1.2,
      "selectedHP": 15,
    },
    {
      "designFlow": 1.63343719621,
      "designPressure": 3377.796,
      "efficiency": 0.6,
      "fanCapacity_kW": 9.19569604602,
      "motorCapacity_kW": 10.1152656506,
      "nFans": 1,
      "name": "Ventilateur vide",
      "opFlow": [
        4.1243791306,
        22.7037957567,
        9.01747335588,
        1.48494290565,
      ],
      "operatingFlow": 1.48494290565,
      "operatingPressure": 2814.83,
      "powerConsumption_kW": 7.66308003835,
      "powerFactor": 1.1,
      "safetyFactorAir": 1.1,
      "safetyFactorPressure": 1.2,
      "selectedHP": 15,
    },
  ],
  "heater": {
    "binVol_yd3": 80.2426984127,
    "burnerHP": 20,
    "capacity": 10,
    "ezPumpHP": 20,
    "model": "1000C",
    "totalHInput_MMBTU": 8.83960929416,
    "wzPumpHP": 50,
  },
  "limits": {
    "ezAirV": 0.84103970877,
    "ezBeltLoad": 24.4744396813,
    "ezEvapFlux": 6.50320392749,
    "maxAirV_EZ": 1.6,
    "maxAirV_WZ": 3.2,
    "maxBL_EZ": 44,
    "maxBedThick": 250,
    "maxEF_EZ": 15,
    "maxEF_WZ": 256,
    "maxEL_EZ": 10.4,
    "maxEL_WZ": 38,
    "nozzleLoad": 148.88117284,
    "sludgeThickness": 310.731139284,
    "unitBTU": 1351.18267569,
    "unitEvapL_EZ": 8.25656477412,
    "unitEvapL_WZ": 54.6169515885,
    "wzAirV": 4.13866869355,
    "wzEvapFlux": 448.383557178,
  },
  "meta": {
    "indicator": 1,
    "mode": "auto",
    "prjName": "Seaview",
    "prjNumber": "5704195001",
  },
  "oil": {
    "ezOilPump": 53.910241818,
    "fO": [
      18.083406608,
      18.083406608,
      13.4439264536,
      13.4439264536,
      20.05415786,
      20.05415786,
      1.97075125203,
      11.4731752016,
      1.97075125203,
    ],
    "fOv": [
      77.2235961479,
      74.4914384661,
      53.910241818,
      53.3008250747,
      85.6395158966,
      82.2992599344,
      8.41591974864,
      45.4874330488,
      7.81339202593,
    ],
    "tO": [
      200,
      154.815905235,
      120,
      105,
      200,
      150,
      200,
      105,
      105,
    ],
    "wzOilPump": 82.2992599344,
  },
  "selection": {
    "depositorNo": 8,
    "dryerType": "SD8315-IO",
    "dsgnDSF": 1607.91666667,
    "dsgnEvapL": 8971.7089372,
    "dsgnWSF": 10719.4444444,
    "evapLperTrain": 2990.56964573,
    "fDSperTrain": 535.972222222,
    "fWSperTrain": 3573.14814815,
    "fWSprodPerTrain": 582.578502415,
    "finalWSF": 1747.73550725,
    "maxCap": 3600,
    "modelNoSelected": 6,
    "nozzleNo": 3,
    "trainNoSelected": 3,
  },
  "streams": {
    "air": [
      {
        "airHv": 834.32069,
        "dptA": 67.6613959309,
        "fAH": 22068.8832167,
        "fDA": 26.451319596,
        "fVolA": 45.4075915134,
        "fWV": 6.21341497309,
        "id": 0,
        "tA": 170,
        "yA": 0.2349,
      },
      {
        "airHv": 829.552066555,
        "dptA": 68.0901049546,
        "fAH": 21942.7468339,
        "fDA": 26.451319596,
        "fVolA": 44.1671772234,
        "fWV": 6.37711908536,
        "id": 1,
        "tA": 154.80080602,
        "yA": 0.241088882625,
      },
      {
        "airHv": 830.503188633,
        "dptA": 68.5841751515,
        "fAH": 21967.905268,
        "fDA": 26.451319596,
        "fVolA": 43.1604713483,
        "fWV": 6.57207666628,
        "id": 2,
        "tA": 141.501293005,
        "yA": 0.248459311923,
      },
      {
        "airHv": 831.17015382,
        "dptA": 68.9909641649,
        "fAH": 21985.5473773,
        "fDA": 26.451319596,
        "fVolA": 42.2968303516,
        "fWV": 6.73786807809,
        "id": 3,
        "tA": 130.295891877,
        "yA": 0.254727105529,
      },
      {
        "airHv": 757.857899921,
        "dptA": 67.3517307905,
        "fAH": 23077.4585566,
        "fDA": 30.4509045285,
        "fVolA": 46.7955177348,
        "fWV": 7.02028970692,
        "id": 4,
        "tA": 125.607415746,
        "yA": 0.230544537695,
      },
      {
        "airHv": 758.225870846,
        "dptA": 67.6688843668,
        "fAH": 23088.6636041,
        "fDA": 30.4509045285,
        "fVolA": 46.077454671,
        "fWV": 7.15616059789,
        "id": 5,
        "tA": 117.442219619,
        "yA": 0.235006503376,
      },
      {
        "airHv": 758.225870846,
        "dptA": 67.6688843668,
        "fAH": 20056.0748357,
        "fDA": 26.451319596,
        "fVolA": 40.0253949282,
        "fWV": 6.21623212794,
        "id": 6,
        "tA": 117.442219619,
        "yA": 0.235006503376,
      },
      {
        "airHv": 758.225870846,
        "dptA": 67.6688843668,
        "fAH": 3032.58876847,
        "fDA": 3.99958493251,
        "fVolA": 6.05205974286,
        "fWV": 0.939928469945,
        "id": 7,
        "tA": 117.442219619,
        "yA": 0.235006503376,
      },
      {
        "airHv": 703.801262562,
        "dptA": 67.6688843668,
        "fAH": 2814.91292522,
        "fDA": 3.99958493251,
        "fVolA": 5.47168564741,
        "fWV": 0.939928469945,
        "id": 8,
        "tA": 80,
        "yA": 0.235006503376,
      },
      {
        "airHv": 99.57488,
        "dptA": 30,
        "fAH": 398.258189704,
        "fDA": 3.99958493251,
        "fVolA": 3.5549179378,
        "fWV": 0.108788710164,
        "id": 9,
        "tA": 30,
        "yA": 0.0272,
      },
      {
        "airHv": 150.66037855,
        "dptA": 30.2401084739,
        "fAH": 602.578979974,
        "fDA": 3.99958493251,
        "fVolA": 4.1243791306,
        "fWV": 0.108788710164,
        "id": 10,
        "tA": 78.5374752493,
        "yA": 0.0272,
      },
      {
        "airHv": 242.927810582,
        "dptA": 44.9193497448,
        "fAH": 3790.09013997,
        "fDA": 15.6017136568,
        "fVolA": 16.797720338,
        "fWV": 0.994525405353,
        "id": 11,
        "tA": 74.4115996123,
        "yA": 0.0637446262142,
      },
      {
        "airHv": 271.664278395,
        "dptA": 44.9193497448,
        "fAH": 4238.42828229,
        "fDA": 15.6017136568,
        "fVolA": 18.0349467118,
        "fWV": 0.994525405353,
        "id": 12,
        "tA": 100,
        "yA": 0.0637446262142,
      },
      {
        "airHv": 273.00470283,
        "dptA": 45.9785724947,
        "fAH": 4259.34120051,
        "fDA": 15.6017136568,
        "fVolA": 17.7398827973,
        "fWV": 1.05604884038,
        "id": 13,
        "tA": 91.7930491978,
        "yA": 0.0676880029726,
      },
      {
        "airHv": 273.006123821,
        "dptA": 46.7261444926,
        "fAH": 4259.36337041,
        "fDA": 15.6017136568,
        "fVolA": 17.4788821527,
        "fWV": 1.10167966373,
        "id": 14,
        "tA": 84.9034294403,
        "yA": 0.0706127344704,
      },
      {
        "airHv": 273.006123821,
        "dptA": 46.7261444926,
        "fAH": 3167.45219109,
        "fDA": 11.6021287243,
        "fVolA": 12.9980747727,
        "fWV": 0.819258034899,
        "id": 15,
        "tA": 84.9034294403,
        "yA": 0.0706127344704,
      },
      {
        "airHv": 274.536054898,
        "dptA": 47.5371091528,
        "fAH": 3185.20264839,
        "fDA": 11.6021287243,
        "fVolA": 12.8275145472,
        "fWV": 0.857686968589,
        "id": 16,
        "tA": 78.5206870537,
        "yA": 0.0739249657516,
      },
      {
        "airHv": 274.735028006,
        "dptA": 48.1068678529,
        "fAH": 3187.51116,
        "fDA": 11.6021287243,
        "fVolA": 12.6739701105,
        "fWV": 0.885736695189,
        "id": 17,
        "tA": 73.1068678529,
        "yA": 0.0763426019688,
      },
      {
        "airHv": 273.006123821,
        "dptA": 46.7261444926,
        "fAH": 1091.91117932,
        "fDA": 3.99958493251,
        "fVolA": 4.48080738007,
        "fWV": 0.282421628831,
        "id": 18,
        "tA": 84.9034294403,
        "yA": 0.0706127344704,
      },
    ],
    "sludge": [
      {
        "fDS": 0.14888117284,
        "fSH": 113.000810185,
        "fWS": 0.992541152263,
        "id": 0,
        "mc": 0.85,
        "sensH": 113.85,
        "tS": 30,
        "xS": 0.15,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 209.659363321,
        "fWS": 0.82883928697,
        "id": 1,
        "mc": 0.82037389494,
        "sensH": 252.955387875,
        "tS": 68.0901049546,
        "xS": 0.17962610506,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 155.022924401,
        "fWS": 0.633883328568,
        "id": 2,
        "mc": 0.765128429587,
        "sensH": 244.560658743,
        "tS": 68.5841751515,
        "xS": 0.234871570413,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 107.902606658,
        "fWS": 0.468092827126,
        "id": 3,
        "mc": 0.681940922373,
        "sensH": 230.51540294,
        "tS": 68.9909641649,
        "xS": 0.318059077627,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 67.2191640718,
        "fWS": 0.332222207558,
        "id": 4,
        "mc": 0.551862670669,
        "sensH": 202.33194092,
        "tS": 67.6688843668,
        "xS": 0.448137329331,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 38.7602555422,
        "fWS": 0.289844653279,
        "id": 5,
        "mc": 0.486341489639,
        "sensH": 133.727688621,
        "tS": 47.5371091528,
        "xS": 0.513658510361,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 29.1440367274,
        "fWS": 0.244214117287,
        "id": 6,
        "mc": 0.390366230692,
        "sensH": 119.33805077,
        "tS": 46.7261444926,
        "xS": 0.609633769308,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 18.1847371317,
        "fWS": 0.189877088382,
        "id": 7,
        "mc": 0.215907647898,
        "sensH": 95.7710974329,
        "tS": 45.9785724947,
        "xS": 0.784092352102,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 13.3661300339,
        "fWS": 0.161827361782,
        "id": 8,
        "mc": 0.08,
        "sensH": 82.5949943616,
        "tS": 48.132214958,
        "xS": 0.92,
      },
    ],
  },
}
`;

exports[`étalon Seaview — runModel > mode user (modèle imposé SD8315-IO × 3 trains) reproduit la référence 1`] = `
{
  "belt": {
    "beltSpeedBottom": 4.71560303577,
    "beltSpeedTop": 59.5524691358,
    "beltW": 6,
    "effectArea": [
      43.524,
      38.796,
      35.922,
    ],
    "ezBBeltL": 5987,
    "ezRT_Bottom": 76.1768955688,
    "ezRT_Top": 6.51459134491,
    "ezTopBeltL": 6466,
    "layerThickness": [
      9.52380952381,
      14.8763921913,
      310.731139284,
    ],
    "porosityFactor": [
      0.552872792309,
      0.62214602167,
      0.8,
    ],
    "totNoodleL": 85995.4294867,
    "wzBeltL": 7254,
    "wzRT": 7.30851308629,
  },
  "condenser": {
    "fW0": 21.463603117,
    "fW1": 22.2947428768,
    "tW0": 25,
    "tW1": 50,
  },
  "energy": {
    "evapEZ": 613.421444794,
    "evapLoadH": 2145.89675251,
    "evapTotal": 2990.56964573,
    "evapWZ": 2377.14820094,
    "ezHInput": 448.338142321,
    "ezHeatLoss": 35.7314814815,
    "heaterDuty": 2590.68055091,
    "totalHInput": 2480.28845863,
    "wzHInput": 2012.80838105,
    "wzHeatLoss": 117.913888889,
  },
  "fans": [
    {
      "designFlow": 4.53681704366,
      "designPressure": 4768.8,
      "efficiency": 0.6,
      "fanCapacity_kW": 36.058621863,
      "motorCapacity_kW": 39.6644840494,
      "nFans": 1,
      "name": "Ventilateur air séchage",
      "opFlow": [
        4.1243791306,
        22.7037957567,
        9.01747335588,
        1.48494290565,
      ],
      "operatingFlow": 4.1243791306,
      "operatingPressure": 3974,
      "powerConsumption_kW": 30.0488515525,
      "powerFactor": 1.1,
      "safetyFactorAir": 1.1,
      "safetyFactorPressure": 1.2,
      "selectedHP": 60,
    },
    {
      "designFlow": 24.9741753324,
      "designPressure": 600,
      "efficiency": 0.6,
      "fanCapacity_kW": 24.9741753324,
      "motorCapacity_kW": 27.4715928656,
      "nFans": 2,
      "name": "Ventilateur circ. ZC",
      "opFlow": [
        4.1243791306,
        22.7037957567,
        9.01747335588,
        1.48494290565,
      ],
      "operatingFlow": 22.7037957567,
      "operatingPressure": 500,
      "powerConsumption_kW": 41.6236255539,
      "powerFactor": 1.1,
      "safetyFactorAir": 1.1,
      "safetyFactorPressure": 1.2,
      "selectedHP": 40,
    },
    {
      "designFlow": 9.91922069147,
      "designPressure": 600,
      "efficiency": 0.6,
      "fanCapacity_kW": 9.91922069147,
      "motorCapacity_kW": 10.9111427606,
      "nFans": 2,
      "name": "Ventilateur circ. ZF",
      "opFlow": [
        4.1243791306,
        22.7037957567,
        9.01747335588,
        1.48494290565,
      ],
      "operatingFlow": 9.01747335588,
      "operatingPressure": 500,
      "powerConsumption_kW": 16.5320344858,
      "powerFactor": 1.1,
      "safetyFactorAir": 1.1,
      "safetyFactorPressure": 1.2,
      "selectedHP": 15,
    },
    {
      "designFlow": 1.63343719621,
      "designPressure": 3377.796,
      "efficiency": 0.6,
      "fanCapacity_kW": 9.19569604602,
      "motorCapacity_kW": 10.1152656506,
      "nFans": 1,
      "name": "Ventilateur vide",
      "opFlow": [
        4.1243791306,
        22.7037957567,
        9.01747335588,
        1.48494290565,
      ],
      "operatingFlow": 1.48494290565,
      "operatingPressure": 2814.83,
      "powerConsumption_kW": 7.66308003835,
      "powerFactor": 1.1,
      "safetyFactorAir": 1.1,
      "safetyFactorPressure": 1.2,
      "selectedHP": 15,
    },
  ],
  "heater": {
    "binVol_yd3": 80.2426984127,
    "burnerHP": 20,
    "capacity": 10,
    "ezPumpHP": 20,
    "model": "1000C",
    "totalHInput_MMBTU": 8.83960929416,
    "wzPumpHP": 50,
  },
  "limits": {
    "ezAirV": 0.84103970877,
    "ezBeltLoad": 24.4744396813,
    "ezEvapFlux": 6.50320392749,
    "maxAirV_EZ": 1.6,
    "maxAirV_WZ": 3.2,
    "maxBL_EZ": 44,
    "maxBedThick": 250,
    "maxEF_EZ": 15,
    "maxEF_WZ": 256,
    "maxEL_EZ": 10.4,
    "maxEL_WZ": 38,
    "nozzleLoad": 148.88117284,
    "sludgeThickness": 310.731139284,
    "unitBTU": 1351.18267569,
    "unitEvapL_EZ": 8.25656477412,
    "unitEvapL_WZ": 54.6169515885,
    "wzAirV": 4.13866869355,
    "wzEvapFlux": 448.383557178,
  },
  "meta": {
    "indicator": 2,
    "mode": "user",
    "prjName": "Seaview",
    "prjNumber": "5704195001",
  },
  "oil": {
    "ezOilPump": 53.910241818,
    "fO": [
      18.083406608,
      18.083406608,
      13.4439264536,
      13.4439264536,
      20.05415786,
      20.05415786,
      1.97075125203,
      11.4731752016,
      1.97075125203,
    ],
    "fOv": [
      77.2235961479,
      74.4914384661,
      53.910241818,
      53.3008250747,
      85.6395158966,
      82.2992599344,
      8.41591974864,
      45.4874330488,
      7.81339202593,
    ],
    "tO": [
      200,
      154.815905235,
      120,
      105,
      200,
      150,
      200,
      105,
      105,
    ],
    "wzOilPump": 82.2992599344,
  },
  "selection": {
    "depositorNo": 8,
    "dryerType": "SD8315-IO",
    "dsgnDSF": 1607.91666667,
    "dsgnEvapL": 8971.7089372,
    "dsgnWSF": 10719.4444444,
    "evapLperTrain": 2990.56964573,
    "fDSperTrain": 535.972222222,
    "fWSperTrain": 3573.14814815,
    "fWSprodPerTrain": 582.578502415,
    "finalWSF": 1747.73550725,
    "maxCap": 3600,
    "modelNoSelected": 6,
    "nozzleNo": 3,
    "trainNoSelected": 3,
  },
  "streams": {
    "air": [
      {
        "airHv": 834.32069,
        "dptA": 67.6613959309,
        "fAH": 22068.8832167,
        "fDA": 26.451319596,
        "fVolA": 45.4075915134,
        "fWV": 6.21341497309,
        "id": 0,
        "tA": 170,
        "yA": 0.2349,
      },
      {
        "airHv": 829.552066555,
        "dptA": 68.0901049546,
        "fAH": 21942.7468339,
        "fDA": 26.451319596,
        "fVolA": 44.1671772234,
        "fWV": 6.37711908536,
        "id": 1,
        "tA": 154.80080602,
        "yA": 0.241088882625,
      },
      {
        "airHv": 830.503188633,
        "dptA": 68.5841751515,
        "fAH": 21967.905268,
        "fDA": 26.451319596,
        "fVolA": 43.1604713483,
        "fWV": 6.57207666628,
        "id": 2,
        "tA": 141.501293005,
        "yA": 0.248459311923,
      },
      {
        "airHv": 831.17015382,
        "dptA": 68.9909641649,
        "fAH": 21985.5473773,
        "fDA": 26.451319596,
        "fVolA": 42.2968303516,
        "fWV": 6.73786807809,
        "id": 3,
        "tA": 130.295891877,
        "yA": 0.254727105529,
      },
      {
        "airHv": 757.857899921,
        "dptA": 67.3517307905,
        "fAH": 23077.4585566,
        "fDA": 30.4509045285,
        "fVolA": 46.7955177348,
        "fWV": 7.02028970692,
        "id": 4,
        "tA": 125.607415746,
        "yA": 0.230544537695,
      },
      {
        "airHv": 758.225870846,
        "dptA": 67.6688843668,
        "fAH": 23088.6636041,
        "fDA": 30.4509045285,
        "fVolA": 46.077454671,
        "fWV": 7.15616059789,
        "id": 5,
        "tA": 117.442219619,
        "yA": 0.235006503376,
      },
      {
        "airHv": 758.225870846,
        "dptA": 67.6688843668,
        "fAH": 20056.0748357,
        "fDA": 26.451319596,
        "fVolA": 40.0253949282,
        "fWV": 6.21623212794,
        "id": 6,
        "tA": 117.442219619,
        "yA": 0.235006503376,
      },
      {
        "airHv": 758.225870846,
        "dptA": 67.6688843668,
        "fAH": 3032.58876847,
        "fDA": 3.99958493251,
        "fVolA": 6.05205974286,
        "fWV": 0.939928469945,
        "id": 7,
        "tA": 117.442219619,
        "yA": 0.235006503376,
      },
      {
        "airHv": 703.801262562,
        "dptA": 67.6688843668,
        "fAH": 2814.91292522,
        "fDA": 3.99958493251,
        "fVolA": 5.47168564741,
        "fWV": 0.939928469945,
        "id": 8,
        "tA": 80,
        "yA": 0.235006503376,
      },
      {
        "airHv": 99.57488,
        "dptA": 30,
        "fAH": 398.258189704,
        "fDA": 3.99958493251,
        "fVolA": 3.5549179378,
        "fWV": 0.108788710164,
        "id": 9,
        "tA": 30,
        "yA": 0.0272,
      },
      {
        "airHv": 150.66037855,
        "dptA": 30.2401084739,
        "fAH": 602.578979974,
        "fDA": 3.99958493251,
        "fVolA": 4.1243791306,
        "fWV": 0.108788710164,
        "id": 10,
        "tA": 78.5374752493,
        "yA": 0.0272,
      },
      {
        "airHv": 242.927810582,
        "dptA": 44.9193497448,
        "fAH": 3790.09013997,
        "fDA": 15.6017136568,
        "fVolA": 16.797720338,
        "fWV": 0.994525405353,
        "id": 11,
        "tA": 74.4115996123,
        "yA": 0.0637446262142,
      },
      {
        "airHv": 271.664278395,
        "dptA": 44.9193497448,
        "fAH": 4238.42828229,
        "fDA": 15.6017136568,
        "fVolA": 18.0349467118,
        "fWV": 0.994525405353,
        "id": 12,
        "tA": 100,
        "yA": 0.0637446262142,
      },
      {
        "airHv": 273.00470283,
        "dptA": 45.9785724947,
        "fAH": 4259.34120051,
        "fDA": 15.6017136568,
        "fVolA": 17.7398827973,
        "fWV": 1.05604884038,
        "id": 13,
        "tA": 91.7930491978,
        "yA": 0.0676880029726,
      },
      {
        "airHv": 273.006123821,
        "dptA": 46.7261444926,
        "fAH": 4259.36337041,
        "fDA": 15.6017136568,
        "fVolA": 17.4788821527,
        "fWV": 1.10167966373,
        "id": 14,
        "tA": 84.9034294403,
        "yA": 0.0706127344704,
      },
      {
        "airHv": 273.006123821,
        "dptA": 46.7261444926,
        "fAH": 3167.45219109,
        "fDA": 11.6021287243,
        "fVolA": 12.9980747727,
        "fWV": 0.819258034899,
        "id": 15,
        "tA": 84.9034294403,
        "yA": 0.0706127344704,
      },
      {
        "airHv": 274.536054898,
        "dptA": 47.5371091528,
        "fAH": 3185.20264839,
        "fDA": 11.6021287243,
        "fVolA": 12.8275145472,
        "fWV": 0.857686968589,
        "id": 16,
        "tA": 78.5206870537,
        "yA": 0.0739249657516,
      },
      {
        "airHv": 274.735028006,
        "dptA": 48.1068678529,
        "fAH": 3187.51116,
        "fDA": 11.6021287243,
        "fVolA": 12.6739701105,
        "fWV": 0.885736695189,
        "id": 17,
        "tA": 73.1068678529,
        "yA": 0.0763426019688,
      },
      {
        "airHv": 273.006123821,
        "dptA": 46.7261444926,
        "fAH": 1091.91117932,
        "fDA": 3.99958493251,
        "fVolA": 4.48080738007,
        "fWV": 0.282421628831,
        "id": 18,
        "tA": 84.9034294403,
        "yA": 0.0706127344704,
      },
    ],
    "sludge": [
      {
        "fDS": 0.14888117284,
        "fSH": 113.000810185,
        "fWS": 0.992541152263,
        "id": 0,
        "mc": 0.85,
        "sensH": 113.85,
        "tS": 30,
        "xS": 0.15,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 209.659363321,
        "fWS": 0.82883928697,
        "id": 1,
        "mc": 0.82037389494,
        "sensH": 252.955387875,
        "tS": 68.0901049546,
        "xS": 0.17962610506,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 155.022924401,
        "fWS": 0.633883328568,
        "id": 2,
        "mc": 0.765128429587,
        "sensH": 244.560658743,
        "tS": 68.5841751515,
        "xS": 0.234871570413,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 107.902606658,
        "fWS": 0.468092827126,
        "id": 3,
        "mc": 0.681940922373,
        "sensH": 230.51540294,
        "tS": 68.9909641649,
        "xS": 0.318059077627,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 67.2191640718,
        "fWS": 0.332222207558,
        "id": 4,
        "mc": 0.551862670669,
        "sensH": 202.33194092,
        "tS": 67.6688843668,
        "xS": 0.448137329331,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 38.7602555422,
        "fWS": 0.289844653279,
        "id": 5,
        "mc": 0.486341489639,
        "sensH": 133.727688621,
        "tS": 47.5371091528,
        "xS": 0.513658510361,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 29.1440367274,
        "fWS": 0.244214117287,
        "id": 6,
        "mc": 0.390366230692,
        "sensH": 119.33805077,
        "tS": 46.7261444926,
        "xS": 0.609633769308,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 18.1847371317,
        "fWS": 0.189877088382,
        "id": 7,
        "mc": 0.215907647898,
        "sensH": 95.7710974329,
        "tS": 45.9785724947,
        "xS": 0.784092352102,
      },
      {
        "fDS": 0.14888117284,
        "fSH": 13.3661300339,
        "fWS": 0.161827361782,
        "id": 8,
        "mc": 0.08,
        "sensH": 82.5949943616,
        "tS": 48.132214958,
        "xS": 0.92,
      },
    ],
  },
}
`;
